--- a/.github/workflows/main.template.yml
+++ b/.github/workflows/main.template.yml
@@ -1,5 +1,5 @@
 name: Production
-run-name: ${{ github.repository }} - Production - ${{ github.run_number }}
+run-name: ${{ github.repository }} - Production - $(date +%Y-%m-%d):${{ github.run_number }}
 
 on:
     [push]
@@ -7,9 +7,30 @@ on:
     #     branches:
     #         - main
 
+env:
+    THEME_DIR: 'wp-content/themes/demo-theme'
+defaults:
+    run:
+        working-directory: ./wp-content/themes/demo-theme
+
 jobs:
-    Explore-GitHub-Actions:
-        name: 'bye'
+    BuildAssets:
+        name: Build + Deploy Assets
         runs-on: ubuntu-latest
         steps:
+            - uses: actions/checkout@v4
+              with:
+                  fetch-depth: 0
+
+            - uses: actions/setup-node@v4
+              with:
+                  node-version: 'latest'
+                  cache: 'npm'
+                  cache-dependency-path: ${{ env.THEME_DIR }}/package-lock.json
+            - run: npm ci
+              name: npm install
+
+            - run: npm run build
+              name: npm build
+
             - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
