--- a/.github/workflows/main.template.yml
+++ b/.github/workflows/main.template.yml
@@ -18,20 +18,10 @@ jobs:
         name: Build + Deploy Assets
         runs-on: ubuntu-latest
         steps:
-            - uses: ./jobs/build.template.yml
-            # - uses: actions/checkout@v4
-            #   with:
-            #       fetch-depth: 0
-
-            - uses: actions/setup-node@v4
+            - uses: actions/checkout@v4
               with:
-                  node-version: 'latest'
-                  cache: 'npm'
-                  cache-dependency-path: ${{ env.THEME_DIR }}/package-lock.json
-            # - run: npm ci
-            #   name: npm install
+                  fetch-depth: 0
 
-            # - run: npm run build
-            #   name: npm build
+            - uses: ./.github/workflows/build/
 
             - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
