--- a/.github/workflows/main.template.yml
+++ b/.github/workflows/main.template.yml
@@ -18,6 +18,21 @@ jobs:
         name: Build + Deploy Assets
         runs-on: ubuntu-latest
         steps:
-            - uses: ./.github/workflows/build/
+            # - uses: actions/checkout@v4
+            #   with:
+            #       fetch-depth: 0
+
+            - uses: ./.github/workflows/build.template.yml
+
+            # - uses: actions/setup-node@v4
+            #   with:
+            #       node-version: 'latest'
+            #       cache: 'npm'
+            #       cache-dependency-path: ${{ env.THEME_DIR }}/package-lock.json
+            # - run: npm ci
+            #   name: npm install
+
+            # - run: npm run build
+            #   name: npm build
 
             - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
