--- a/.github/workflows/build.template.yml
+++ b/.github/workflows/build.template.yml
@@ -1,11 +1,29 @@
 on:
     workflow_call:
+        inputs:
+            dependencies:
+                required: false
+            THEME_DIR:
+                required: false
+
+# env:
+#     dependencies: ${{ inputs.dependencies }}
+# defaults:
+#     run:
+#         working-directory: ./wp-content/themes/demo-theme
 
 jobs:
     build:
-        # name: Unit test
-        # runs-on: ubuntu-latest
+        name: Build + Deploy Assets
+        if: always()
+        needs: ${{ inputs.dependencies }}
+        runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v4
               with:
                   fetch-depth: 0
+            # - run: echo ${{ inputs.THEME_DIR }} '---';
+
+            # - run: echo ${{ inputs.dependencies }}
+            # - run: echo ${{env.dependencies}}
+            - run: ls -la
