--- a/.github/workflows/build.template.yml
+++ b/.github/workflows/build.template.yml
@@ -2,8 +2,10 @@ on:
     workflow_call:
         inputs:
             dependencies:
+                type: string
                 required: false
             THEME_DIR:
+                type: string
                 required: false
 
 # env:
