--- a/.github/workflows/build.template.yml
+++ b/.github/workflows/build.template.yml
@@ -16,9 +16,9 @@ env:
 
 jobs:
     build:
-        name: Build + Deploy Assets
+        # name: Build + Deploy Assets
         if: always()
-        # needs: ${{ inputs.dependencies }}
+        needs: ${{ env.dependencies }}
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v4
