--- a/.github/workflows/build.template.yml
+++ b/.github/workflows/build.template.yml
@@ -19,7 +19,7 @@ jobs:
     build:
         # name: Build + Deploy Assets
         if: always()
-        needs: $dependencies
+        needs: ''
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v4
