--- a/.github/workflows/main.template.yml
+++ b/.github/workflows/main.template.yml
@@ -20,7 +20,7 @@ jobs:
         uses: ./.github/workflows/build.template.yml
         with:
             THEME_DIR: 'wp-content/themes/demo-theme'
-            dependencies: BackupSite
+            dependencies: call-BackupSite
     # BuildAssets:
     #     name: Build + Deploy Assets
     #     runs-on: ubuntu-latest
