--- a/.github/workflows/main.template.yml
+++ b/.github/workflows/main.template.yml
@@ -1,5 +1,5 @@
 name: Production
-run-name: ${{ github.repository }} - Production - ${{ github.run_number }}
+run-name: ${{ github.repository }} - Production - ${{ github.run_attempt }}
 
 on:
     [push]
@@ -8,43 +8,18 @@ on:
     #         - main
 
 env:
-    THEME_DIR: 'wp-content/themes/demo-theme'
+    THEME_DIR: './wp-content/themes/demo-theme'
 defaults:
     run:
         working-directory: ./wp-content/themes/demo-theme
 
 jobs:
-    BackupSite:
+    call-BackupSite:
+        name: Create backup point
         uses: ./.github/workflows/backup.template.yml
 
     call-BuildAssets:
         uses: ./.github/workflows/build.template.yml
-        needs: [BackupSite]
+        needs: call-BackupSite
         with:
-            THEME_DIR: 'wp-content/themes/demo-theme'
-    # BuildAssets:
-    #     name: Build + Deploy Assets
-    #     runs-on: ubuntu-latest
-    #     needs: [call-buildAssets]
-    #     steps:
-    #         - uses: actions/checkout@v4
-    #           id: first_checkout
-    #           with:
-    #               fetch-depth: 0
-
-    # - uses: ./.github/build
-    #   with:
-    #       dependencies: 'ssss'
-
-    # - uses: actions/setup-node@v4
-    #   with:
-    #       node-version: 'latest'
-    #       cache: 'npm'
-    #       cache-dependency-path: ${{ env.THEME_DIR }}/package-lock.json
-    # - run: npm ci
-    #   name: npm install
-
-    # - run: npm run build
-    #   name: npm build
-    # steps:
-    #     - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
+            THEME_DIR: './wp-content/themes/demo-theme'
