More tests with run numbers.

--- a/.github/workflows/main.template.yml
+++ b/.github/workflows/main.template.yml
@@ -1,5 +1,5 @@
 name: Production
-run-name: ${{ github.repository }} - Production - ${{ github.run_attempt }}
+run-name: ${{ github.repository }} - Production - $(date +'%Y%m%d'):${{ github.run_id }}
 
 on:
     [push]
@@ -9,21 +9,24 @@ on:
 
 env:
     THEME_DIR: './wp-content/themes/demo-theme'
-defaults:
-    run:
-        working-directory: ./wp-content/themes/demo-theme
+# defaults:
+#     run:
+#         working-directory: ./wp-content/themes/demo-theme
 
 jobs:
-    call-BackupSite:
-        name: Create backup point
-        uses: ./.github/workflows/backup.template.yml
+    chose:
+        runs-on: ubuntu-latest
+        steps:
+            - run: echo $(date +'%Y%m%d')
+    # call-BackupSite:
+    #     uses: ./.github/workflows/backup.template.yml
 
-    call-BuildAssets:
-        uses: ./.github/workflows/build.template.yml
-        needs: call-BackupSite
-        with:
-            THEME_DIR: './wp-content/themes/demo-theme'
+    # call-BuildAssets:
+    #     uses: ./.github/workflows/build.template.yml
+    #     needs: call-BackupSite
+    #     with:
+    #         THEME_DIR: './wp-content/themes/demo-theme'
 
-    call-DeployHost:
-        uses: ./.github/workflows/deploy.template.yml
-        needs: call-BuildAssets
+    # call-DeployHost:
+    #     uses: ./.github/workflows/deploy.template.yml
+    #     needs: call-BuildAssets
