--- a/.github/workflows/hotfixPR.template.yml
+++ b/.github/workflows/hotfixPR.template.yml
@@ -6,10 +6,7 @@ jobs:
         name: Create PR to develop from hotfix or bugfix
         runs-on: ubuntu-latest
         if: |
-            ${{(
-              ( startsWith(${{github.head_ref}}, 'refs/heads/hotfixs/') || startsWith(${{github.head_ref}}, 'refs/heads/bugfixs/') )
-              && startsWith(${{github.ref}}, 'refs/pull/')
-            )}}
+            startsWith(${{github.head_ref}}, 'refs/heads/hotfixs/')
         steps:
             - run: |
                   echo 'yeah!'
