hotfix condition should be good.

--- a/.github/workflows/hotfixPR.template.yml
+++ b/.github/workflows/hotfixPR.template.yml
@@ -5,8 +5,7 @@ jobs:
     job:
         name: Create PR to develop from hotfix or bugfix
         runs-on: ubuntu-latest
-        if: |
-            ${{ startsWith(github.head_ref, 'refs/heads/hotfixs/') }}
+        if: ${{ ( (startsWith(github.head_ref, 'hotfix/') || startsWith(github.head_ref, 'bugfix/')) && startsWith(github.ref, 'refs/pull/') ) }}
         steps:
             - run: |
                   echo 'yeah!'
