--- a/.github/workflows/hotfixPR.template.yml
+++ b/.github/workflows/hotfixPR.template.yml
@@ -22,7 +22,7 @@ jobs:
                   pr_title=$(jq -r '.title' <<< "$pr_info")
                   pr_description=$(jq -r '.body' <<< "$pr_info")
 
-                  gh pr create --base develop --title "Merge `${{github.head_ref}}` to develop" --body "**[HOTFIX] - $pr_title**\n\n$pr_description"
+                  $(gh pr create --base develop --title "Merge `${{github.head_ref}}` to develop" --body "**[HOTFIX] - $pr_title**\n\n$pr_description")
 
               name: Create PR to develop from hotfix or bugfix
               env:
