--- a/.github/workflows/hotfixPR.template.yml
+++ b/.github/workflows/hotfixPR.template.yml
@@ -6,6 +6,8 @@ jobs:
         name: Create PR to develop from hotfix or bugfix
         runs-on: ubuntu-latest
         if: ${{ ( (startsWith(github.head_ref, 'hotfix/') || startsWith(github.head_ref, 'bugfix/')) && startsWith(github.ref, 'refs/pull/') || true) }}
+        permissions:
+            pull-request: write
         steps:
             - uses: actions/checkout@v4
               with:
