trying to automate PR creation when hotfix: problems with permissions.

--- a/.github/workflows/hotfixPR.template.yml
+++ b/.github/workflows/hotfixPR.template.yml
@@ -1,15 +1,13 @@
 on:
     workflow_call:
 
-permissions:
-    pull-requests: write
-
 jobs:
     job:
         name: Create PR to develop from hotfix or bugfix
         runs-on: ubuntu-latest
         if: ${{ ( (startsWith(github.head_ref, 'hotfix/') || startsWith(github.head_ref, 'bugfix/')) && startsWith(github.ref, 'refs/pull/') || true) }}
-
+        permissions:
+            pull-requests: write
         steps:
             - uses: actions/checkout@v4
               with:
@@ -26,7 +24,7 @@ jobs:
                   pr_title=$(jq -r '.title' <<< "$pr_info")
                   pr_description=$(jq -r '.body' <<< "$pr_info")
 
-                  $(gh pr create --base develop --head ${{github.head_ref}} --title "Merge `${{github.head_ref}}` to develop" --body "**[HOTFIX] - $pr_title**\n\n$pr_description")
+                  $(gh pr create --base develop --head ${{github.head_ref}} --title "Merge ${{github.head_ref}} to develop" --body "**[HOTFIX] - $pr_title**\n\n$pr_description")
 
               name: Create PR to develop from hotfix or bugfix
               env:
