trying to automate PR creation when hotfix: problems with permissions.

--- a/.github/workflows/hotfix.template.yml
+++ b/.github/workflows/hotfix.template.yml
@@ -8,6 +8,8 @@ on:
         branches:
             - main
 
+permissions: write-all
+
 env:
     THEME_DIR: './wp-content/themes/demo-theme'
 defaults:
