--- a/.github/workflows/hotfix.template.yml
+++ b/.github/workflows/hotfix.template.yml
@@ -8,7 +8,8 @@ on:
         branches:
             - main
 
-permissions: write-all
+permissions:
+    pull-requests: write
 
 env:
     THEME_DIR: './wp-content/themes/demo-theme'
