--- a/.github/workflows/hotfixPR.template.yml
+++ b/.github/workflows/hotfixPR.template.yml
@@ -23,9 +23,9 @@ jobs:
                   pr_title=$(jq -r '.title' <<< "$pr_info")
                   pr_description=$(jq -r '.body' <<< "$pr_info")
 
-                  $(gh pr create --base develop --head ${{github.head_ref}} --title "Merge ${{github.head_ref}} to develop" --body "**[HOTFIX] - $pr_title**
+                  msg="**[HOTFIX] - $pr_title**\n\n$pr_description"
 
-                  $pr_description")
+                  $(gh pr create --base develop --head ${{github.head_ref}} --title "Merge ${{github.head_ref}} to develop" --body "$msg")
 
               name: Create PR to develop from hotfix or bugfix
               env:
