--- a/.github/workflows/hotfix.template.yml
+++ b/.github/workflows/hotfix.template.yml
@@ -8,8 +8,7 @@ on:
         branches:
             - main
 
-permissions:
-    pull-requests: write
+permissions: write-all
 
 env:
     THEME_DIR: './wp-content/themes/demo-theme'
