Change trigger for`hotfixPR` workflow.

--- a/.github/workflows/hotfix.template.yml
+++ b/.github/workflows/hotfix.template.yml
@@ -3,8 +3,8 @@ run-name: ${{ github.repository }} - Hotfix PR - ${{ github.run_id }}
 
 on:
     pull_request:
-        # types:
-        # - opened
+        types:
+            - opened
         branches:
             - main
 
