--- a/.github/workflows/mergeStaging.template.yml
+++ b/.github/workflows/mergeStaging.template.yml
@@ -2,12 +2,12 @@ name: Merge `production` to `staging`
 run-name: ${{ github.repository }} - Merge `production` to `staging` - ${{ github.run_id }}
 
 on:
-    # [push]
-    workflow_run:
-        workflows: ['Production']
-        types: [completed]
-        branches:
-            - 'main'
+    [push]
+    # workflow_run:
+    #     workflows: ['Production']
+    #     types: [completed]
+    #     branches:
+    #         - 'main'
 # push:
 #     branches:
 #         - main
