--- a/.github/workflows/stagingPR.template.yml
+++ b/.github/workflows/stagingPR.template.yml
@@ -5,7 +5,6 @@ jobs:
     job:
         name: Create & merge PR from `main` to `staging`
         runs-on: ubuntu-latest
-        # if: ${{ ( (startsWith(github.head_ref, 'hotfix/') || startsWith(github.head_ref, 'bugfix/')) && startsWith(github.ref, 'refs/pull/') || true) }}
 
         steps:
             - uses: actions/checkout@v4
@@ -13,7 +12,7 @@ jobs:
                   fetch-depth: 0
 
             - run: |
-                  output=$(gh pr create --base staging --head main --title "(automated) Merge main to staging" --body "This is an automated PR to update staging environment.")
+                  output=$(gh pr create --base staging --head main --title "(automated) Merge main to staging" --body "This is an automated PR to update staging environment." --fill-verbose)
 
                   $(gh pr merge --auto --delete-branch --squash $output)
 
