--- a/.github/workflows/main.template.yml
+++ b/.github/workflows/main.template.yml
@@ -14,10 +14,10 @@ defaults:
 
 jobs:
     call-BackupSite:
-        uses: jessekahner/shared-actions/.github/workflows/backup.template.yml
+        uses: jessekahner/shared-actions/.github/workflows/backup.template.yml@main
 
     call-BuildAssets:
-        uses: jessekahner/shared-actions/.github/workflows/build.template.yml
+        uses: jessekahner/shared-actions/.github/workflows/build.template.yml@main
         needs: call-BackupSite
         with:
             THEME_DIR: './wp-content/themes/demo-theme'
