--- a/.github/workflows/main.template.yml
+++ b/.github/workflows/main.template.yml
@@ -17,7 +17,7 @@ jobs:
         uses: jessekahner/shared-actions/.github/workflows/backup.template.yml@main
 
     call-BuildAssets:
-        uses: /.github/workflows/build.template.yml
+        uses: ./.github/workflows/build.template.yml
         needs: call-BackupSite
         with:
             THEME_DIR: './wp-content/themes/demo-theme'
