More changes for external actions.

--- a/.github/workflows/hotfix.template.yml
+++ b/.github/workflows/hotfix.template.yml
@@ -18,4 +18,4 @@ defaults:
 
 jobs:
     call-HotfixPR:
-        uses: ./.github/workflows/hotfixPR.template.yml
+        uses: jessekahner/shared-actions/.github/workflows/hotfixPR.template.yml@main
