--- a/.github/workflows/mergeStaging.template.yml
+++ b/.github/workflows/mergeStaging.template.yml
@@ -12,4 +12,4 @@ permissions: write-all
 
 jobs:
     call-StagingPR:
-        uses: ./.github/workflows/stagingPR.template.yml
+        uses: jessekahner/shared-actions/.github/workflows/stagingPR.template.yml@main
